<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.CadastroFragment">

    <TextView
        android:id="@+id/tv_titulo"
        style="@style/TituloTheme"
        tools:text="Nova moeda"
        android:text="@string/nova_moeda"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/list_item_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/codigo"/>

        <EditText
            android:id="@+id/et_codigo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_marginBottom="@dimen/margin_component" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descricao"/>

        <EditText
            android:id="@+id/et_descricao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"
            android:maxLines="1"
            android:maxLength="50"
            android:layout_marginBottom="@dimen/margin_component"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/abreviatura"/>

        <EditText
            android:id="@+id/et_abreviatura"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapCharacters"
            android:layout_marginBottom="@dimen/margin_component"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cotacao_atual"/>

        <EditText
            android:id="@+id/et_cotacao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="7"
            android:text="0.00"
            tools:ignore="HardcodedText" />

    </LinearLayout>

</LinearLayout>